--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch blogsData.json --port 5000"
   },
   "dependencies": {
+    "env": "^0.0.2",
     "framer-motion": "^12.4.2",
+    "json-server": "^1.0.0-beta.3",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
