--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "framer-motion": "^12.4.2",
     "json-server": "^1.0.0-beta.3",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-tsparticles": "^2.12.2"
   },
