--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "env": "^0.0.2",
     "framer-motion": "^12.4.2",
     "json-server": "^1.0.0-beta.3",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
